# learn_x

./: .gitignore  CLAUDE.md  Claude.md  DEMO_PLAYGROUND_DESIGN.md  FEATURE_CODE_MAP.md  LEARNING_TRACKER.md  LEARN_NEXTJS_REFACTOR_PLAN.md  PROJECT_STATUS.md  README.md  todo-task
docs/: INDEX.md
kmp/: README.md
learn_cpp/: .gitignore  CLAUDE.md  CORE_CHECKLIST.md  EXECUTION_GUIDE.md  LEARNING_PATH.md  QUICK_START.md  RENAME_PLAN.md  REORGANIZATION_SUMMARY.md  TROUBLESHOOTING.md  hello  oop  pointers  readme.md  reorganize_files.sh  verify_organization.sh
learn_cpp_old/: CMakeLists.txt
learn_cpp_old/src/: main.cpp
learn_cpp_old/src/include/: front_demo.h
learn_docker/: .gitignore  CLAUDE.md  CORE_CHECKLIST.md  Dockerfile  LEARNING_PATH.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-practice.sh  learn-interactive.sh  pom.xml  test-api.sh
learn_electron/: .gitignore  .npmrc  BRIDGE_QUICK_START.md  BRIDGE_TECHNICAL_EVALUATION.md  BRIDGE_TEST_REPORT.md  CLAUDE.md  JNI_ADDON_ANALYSIS.md  LESSON_01.md  LESSON_02.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  typescript_反向回调.md  vite.config.ts  动态库最终评估.md
learn_git/: CLAUDE.md
learn_git_feature/: config.json  feature.md
learn_go/: CLAUDE.md  CORE_CHECKLIST.md  QUICK_START.md  README.md
learn_ios/: .gitignore  CLAUDE.md  CORE_CHECKLIST.md  LEARNING_PATH.md  QUICK_START.md  README.md  TROUBLESHOOTING.md
learn_nextjs/: .gitignore  CLAUDE.md  CORE_CHECKLIST.md  QUICK_START.md  (+4 more)
(+194 files in other folders)
